--- a/Widget Test/app/src/main/AndroidManifest.xml
+++ b/Widget Test/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/image_widget_info" />
         </receiver>
+
+        <service android:name=".WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 
 </manifest>
